cmake_minimum_required(VERSION 2.8.3)
project(dr_marker)

find_package(catkin REQUIRED COMPONENTS
	dr_base
	dr_eigen
	roscpp
	visualization_msgs
)

catkin_package(
	INCLUDE_DIRS include
	LIBRARIES ${PROJECT_NAME}
)

dr_include_directories(
	include/${PROJECT_NAME}
	${catkin_INCLUDE_DIRS}
)

add_library(${PROJECT_NAME}
	src/marker.cpp
)

target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})

catkin_add_gtest(${PROJECT_NAME}_test_marker test/marker.cpp)

target_link_libraries(${PROJECT_NAME}_test_marker ${catkin_LIBRARIES} ${PROJECT_NAME})

install(DIRECTORY include/${PROJECT_NAME}/
	DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
	FILES_MATCHING PATTERN "*.hpp"
)
