<?xml version="1.0"?>
<package format="2">
	<name>dr_marker</name>
	<version>0.0.0</version>
	<description>The dr_marker package</description>

	<maintainer email="hans@todo.todo">hans</maintainer>

	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>dr_base</depend>
	<depend>dr_eigen</depend>
	<depend>roscpp</depend>
	<depend>visualization_msgs</depend>

	<export>
	</export>
</package>
