<?xml version="1.0"?>
<package format="2">
	<name>dr_marker</name>
	<version>0.1.2</version>
	<description>The dr_marker package</description>
	<license>all-rights-reserved</license>

	<maintainer email="hans@todo.todo">hans</maintainer>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>dr_eigen</depend>
	<depend>dr_param</depend>
	<depend>roscpp</depend>
	<depend>visualization_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>interactive_markers</depend>
</package>
